# committo

./: .gitignore  .goreleaser.yaml  .release.toml  Cargo.toml  README.md  build.rs  test_arch_fix.rs
.github/workflows/: release.yml
scripts/: smoke_test.sh
src/: api.rs  cli.rs  commit.rs  config.rs  convention.rs  git.rs  lib.rs  main.rs  openai.rs  utils.rs
src/providers/: mock.rs  mod.rs  openai.rs
tests/: candidate_count_test.rs  cli.rs  commit_test.rs  config_update_test.rs  provider_integration_tests.rs  provider_tests.rs  provider_unit_tests.rs  smoke_test.rs
tests/common/: mock.rs
tests/providers/: mock.rs  mod.rs
