[package]
name = "committo"
version = "0.1.0"
edition = "2024"


[dependencies]
async-trait = "0.1.73"
clap = { version = "4.5.4", features = ["derive"] }
home = "0.5.9"
dirs = "5.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8"
tokio = { version = "1.37.0", features = ["full"] }
dialoguer = "0.11.0"
spinners = "4.1.1"

[dev-dependencies]
tempfile = "3.10.1"
assert_cmd = "2.0.14"
predicates = "3.1.0"
