[package]
name = "committo"
version = "0.0.9"
edition = "2024"
description = "AI-powered commit message generator"
license     = "MIT"
repository  = "https://github.com/dizzyplay/committo"


[dependencies]
async-trait = "0.1.73"
clap = { version = "4.5.4", features = ["derive"] }
home = "0.5.9"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8"
tokio = { version = "1.37.0", features = ["full"] }
inquire = "0.7.5"
spinners = "4.1.1"

[dev-dependencies]
tempfile = "3.10.1"
assert_cmd = "2.0.14"
predicates = "3.1.0"

[package.metadata.release]   # ← ‘release’ 섹션의 정확한 이름
publish = false
verify  = false